@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220114"
-#define public MagickPackageReleaseDate "snapshot-20220114"
+#define public MagickPackageVersionAddendum ".020220115"
+#define public MagickPackageReleaseDate "snapshot-20220115"
