@@ -390,25 +390,40 @@ distributed with &quot;.xz&quot; or &quot;.lzma&quot; extensions.</p>
 <li><p class="first">GraphicsMagick requires the Zstandard (Zstd) library from</p>
 <blockquote>
 <p><a class="reference external" href="https://facebook.github.io/zstd/">https://facebook.github.io/zstd/</a></p>
+<blockquote>
 <p>or</p>
+</blockquote>
 <p><a class="reference external" href="https://github.com/facebook/zstd/releases">https://github.com/facebook/zstd/releases</a></p>
 </blockquote>
 <p>to read or write Zstd compressed TIFF images.  In the future it is
 likely that other purposes will be found for Zstd.</p>
 </li>
 <li><p class="first">GraphicsMagick may require the deflate library to link with libtiff.</p>
-<blockquote>
 <p>Libtiff may optionally depend on the libdeflate library (from
-<a class="reference external" href="https://github.com/ebiggers/libdeflate">https://github.com/ebiggers/libdeflate</a>).  Linking with this
-library may be necessary for builds where libtiff depends on
-libdeflate.</p>
-</blockquote>
+<a class="reference external" href="https://github.com/ebiggers/libdeflate">https://github.com/ebiggers/libdeflate</a>).  Linking with this library
+may be necessary for builds where libtiff depends on libdeflate.</p>
 </li>
 <li><p class="first">GraphicsMagick requires the heif library from</p>
 <blockquote>
 <p><a class="reference external" href="https://github.com/strukturag/libheif">https://github.com/strukturag/libheif</a></p>
-<p>to read heif/heic files.</p>
+<p>and the libde265 library from</p>
+<p><a class="reference external" href="https://github.com/strukturag/libde265">https://github.com/strukturag/libde265</a></p>
 </blockquote>
+<p>to read HEIF/h.265 files. Libheif makes use of libde265 for
+h.265/HEVC decoding and libx265 for encoding.  GraphicsMagick does
+not itself provide any h.265/HEVC algoriths and it does not
+currently support encoding.</p>
+<p>The HEVC codec is covered by a huge number of patents (the MPEG LA
+HEVC patent list is 164 pages long!).  While GraphicsMagick is
+unable to grant any patent usage rights to users or offer legal
+advice, HEVC patents are normally paid for &quot;per device&quot; and so it is
+possible and even likely that the user's modern &quot;device&quot; is already
+covered.  For example, users of Windows 10, Apple's OS-X, or popular
+video cards may already be entitled to use the HEVC codec since the
+vendor has already paid for it.  Some countries do not support
+software patents.  The user is responsible for assuring that some
+entity has paid to allow use of any applicable HEVC patents on their
+device, or that the patents do not apply in their country.</p>
 </li>
 </ul>
 </div>
