@@ -261,6 +261,15 @@ image width, height, depth, and byte order.</td>
 <td>Use -size, -depth, and -endian to specify the
 image width, height, depth, and byte order.</td>
 </tr>
+<tr><td><a class="reference external" href="https://en.wikipedia.org/wiki/High_Efficiency_Image_File_Format">HEIF</a></td>
+<td>R</td>
+<td>High Efficiency Image
+File Format (with
+h.265/HEVC encoding)</td>
+<td>HEIF is a container format supporting multiple
+codecs.  HEIF with h.265/HEVC encoding
+is supported via libheif and libde265.</td>
+</tr>
 <tr><td>HPGL</td>
 <td>R</td>
 <td>HP-GL plotter language</td>
