@@ -1,3 +1,10 @@
+2022-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * www/formats.rst: Add HEIF to the list of supported formats.
+
+        * README.txt: Expand the text regarding support for HEIF/HVEC
+        support.
+
 2022-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/heif.c: HEIF reader written by Tobias Mark.  From
